--- a/game.css
+++ b/game.css
@@ -24,8 +24,44 @@ table{
 
 body{
     background-color: aqua;
+    
 }
 
 #win{
     text-align: center;
+
+}
+
+#window{
+    width: 700px;
+    height: 300px;
+    border: 1px solid black;
+    background-color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    visibility:hidden;
+
+    
+    
+}
+
+#Message{
+    text-align: center;
+    font-size: xx-large;
+    margin-top: 100px;
+    margin-right: 30px;
+    
+}
+
+#retry{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-left: -30px; 
+    margin-top: 40px; 
+    width: 100px;
+    height: 30px;
 }
